Fixed the mobile layout issues.

--- a/src/components/glossaryTerm/glossaryTerm.module.css
+++ b/src/components/glossaryTerm/glossaryTerm.module.css
@@ -4,6 +4,8 @@
 }
 
 .container a {
+  display: flex;
+  align-items: center;
   color: #6fb7eb;
   font-weight: bolder;
 }
